-
Bug
-
Resolution: Fixed
-
P2: Important
-
6.5.3, 6.6.0
-
-
da1741d4c (dev), 0505ebdc8 (6.7), ead19dbc0 (6.6), f11f4b88f (tqtc/lts-6.5)
If you enable the qmllint for a with a lot of QML files the command line generated can exceed the 8192 characters limit and thus cannot be run correctly.
This command line is added by these lines in Qt6QmlMacros.cmake
set(cmd
${tool_wrapper}
$<TARGET_FILE:${QT_CMAKE_EXPORT_NAMESPACE}::qmllint>
--bare
${import_args}
${qrc_args}
${qmllint_files}
)
Maybe it could be possible to split the command line in several calls to avoid that problem?
- is duplicated by
-
QTBUG-107110 QML linting is not functional for a project with huge number of QML files
-
- Closed
-